# zkGPT

./: .gitignore  CMakeLists.txt  build.sh  g1_0402.npy  llm.sh
PNP/: msm16.nsys-rep  msm_steady14.nsys-rep  msm_steady15.nsys-rep  msm_steady16.nsys-rep
PNP-hyperplonk/: HEIGHT9RESULT.txt  a.py  gpu_memory_monitor.sh  plonk.py  proof_data.txt  res  test.py  totensor.py  trace.json
PNP-hyperplonk/arkworks_plonk/: arithmetic.py  gen_proof.py  serialize.py  structure.py
PNP-hyperplonk/arkworks_plonk/KZG/: kzg10.py
PNP-hyperplonk/arkworks_plonk/bls12_381/: edwards.py
PNP-hyperplonk/arkworks_plonk/plonk_core/lookup/: multiset.py
PNP-hyperplonk/aten/src/ATen/: Dispatch.h
PNP-hyperplonk/c10/core/: Scalar.h  ScalarType.h
PNP-hyperplonk/c10/util/: BigInteger.h
PNP-hyperplonk/hyperplonk/: serialize.py
PNP-hyperplonk/hyperplonk/arithmetic/src/: util.py
PNP-hyperplonk/hyperplonk/fields/: __init__.py  bls12_381.py  fp.py
PNP-hyperplonk/hyperplonk/src/: custom_gate.py
PNP-hyperplonk/hyperplonk/transcript/: transcript.py
PNP-hyperplonk/py_plonk/: gen_proof.py  jacobian.py  load.py  tare_plonk.py  tempCodeRunnerFile.py  transform.py
PNP-hyperplonk/py_plonk/KZG/: kzg10.py
PNP-hyperplonk/py_plonk/plonk_core/src/: utils.py
PNP-hyperplonk/py_plonk/sppark/: load.py
PNP-hyperplonk/py_plonk/transcript/: flags.py
PNP-hyperplonk/torch/: __init__.py
PNP-hyperplonk/torch/csrc/utils/: tensor_numpy.cpp
PNP-hyperplonk/torch/nn/: functional.py
PNP-hyperplonk/torch/nn/modules/: zksnark.py
PNP-hyperplonk/torch/pnp/: __init__.py  zkp.py
PNP/aten/src/ATen/: CMakeLists.txt  Dispatch.h
PNP/c10/util/: TypeCast.h
PNP/hyrax_cuda/: __init__.py  arithmetic.py  hyrax_cuda.py  jacobian.py  main.py
PNP/hyrax_cuda/ALT_BN128/: fq.py  fr.py
PNP/hyrax_cuda/arkworks_plonk/: arithmetic.py  composer.py  domain.py  load.py  transform.py
PNP/hyrax_cuda/arkworks_plonk/KZG/: kzg10.py
PNP/hyrax_cuda/arkworks_plonk/bls12_381/: fq.py  fr.py
PNP/hyrax_cuda/arkworks_plonk/transcript/: transcript.py
PNP/hyrax_cuda/hyperplonk/fields/: bls12_381.py  fr.py
PNP/torch/nn/: functional.py
PNP/torch/pnp/: zkp.py
src/: CMakeLists.txt  ZKGPT_0715工作总结.md  ZKGPT_0716.md  circuit.cpp  circuit.h  export_gpt2_complete_params.py  generator_cache.cpp  generator_cache.hpp  gkr_protocol.hpp  gkr_serialization.cpp  gkr_serialization.hpp  gkr_verifier.cpp  gkr_verifier.hpp  hyrax.cpp  hyrax_opening.cpp  hyrax_opening.hpp  hyrax_rp.cpp  main_demo_llm.cpp  main_range_artifact_verify.cpp  main_range_tests.cpp  main_zkgpt_artifact_verify.cpp  models.cpp  neuralNetwork.cpp  neuralNetwork.hpp  prover.cpp  prover.hpp  range_logup.cpp  range_logup.hpp  range_protocol.cpp  range_protocol.hpp  range_prover.cpp  range_prover.hpp  range_serialization.cpp  range_serialization.hpp  range_sumcheck.cpp  range_sumcheck.hpp  range_wide.hpp  sparse_opening.cpp  sparse_opening.hpp  stats.hpp  (+10 more)
(+77 files in other folders)
